--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "dependencies": {
     "typescript": "^4.6.4",
     "express": "^4.18.1",
-    "ejs": "^3.1.8"
+    "ejs": "^3.1.8",
+    "dotenv": "^16.0.1",
+    "ws": "^8.6.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.34",
-    "@types/express": "^4.17.13"
+    "@types/express": "^4.17.13",
+    "@types/ws": "^8.5.3"
   },
   
   "scripts": {
